--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "homepage": "https://yachaverrc.github.io/Portfolio",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.1",
-    "cdbreact": "^1.5.18",
-    "react": "^18.2.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "bootstrap": "^5.3.3",
+    "cdbreact": "^1.5.19",
+    "react": "^18.3.1",
     "react-awesome-slider": "^4.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.15.0",
+    "react-loop": "^0.1.0",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
-    "react-scroll": "^1.8.9",
-    "react-typical": "^0.1.3",
-    "tar": "^6.1.15",
-    "web-vitals": "^2.1.4"
+    "react-scroll": "^1.9.0",
+    "tar": "^7.4.3",
+    "web-vitals": "^4.2.3"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -47,7 +47,14 @@
     ]
   },
   "devDependencies": {
-    "@iconify/react": "^4.1.1",
-    "gh-pages": "^6.0.0"
+    "@babel/plugin-transform-class-properties": "^7.25.4",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.7",
+    "@babel/plugin-transform-numeric-separator": "^7.24.7",
+    "@babel/plugin-transform-optional-chaining": "^7.24.8",
+    "@babel/plugin-transform-private-methods": "^7.25.4",
+    "@iconify/react": "^5.0.2",
+    "@rollup/plugin-terser": "^0.4.4",
+    "gh-pages": "^6.1.1",
+    "rimraf": "^6.0.1"
   }
 }
